[gd_scene load_steps=5 format=3 uid="uid://b1ptqpa5v1741"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_2c0pe"]
[ext_resource type="Texture2D" uid="uid://cq2nfat2bqxt1" path="res://Assets/Image/Background/entrance.jpg" id="2_4wot7"]
[ext_resource type="FontFile" uid="uid://dq8cr4en05khy" path="res://Assets/Font/Kenney Bold.ttf" id="2_d6tha"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jte4w"]
bg_color = Color(0.12549, 0.12549, 0.12549, 0.498039)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2c0pe")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4wot7")
expand_mode = 1
stretch_mode = 6

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jte4w")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_d6tha")
theme_override_font_sizes/font_size = 64
text = "Chopstick"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 400
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../OptionsButton")
theme_override_fonts/font = ExtResource("2_d6tha")
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="OptionsButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../CreditsButton")
theme_override_fonts/font = ExtResource("2_d6tha")
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="CreditsButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme_override_fonts/font = ExtResource("2_d6tha")
theme_override_font_sizes/font_size = 32
text = "Credits"

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../CreditsButton")
theme_override_fonts/font = ExtResource("2_d6tha")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
